src/assets/less/local.less
/*-- -------------------------- -->
<---       Side By Side         -->
<--- -------------------------- -*/

/* Mobile - 360px */
@media only screen and (min-width: 0rem) {
    #sbs-1809 {
        padding: var(--sectionPadding);
        /* 100px - 200px */
        padding-bottom: clamp(6.25rem, 8vw, 12.5rem);
        /* clips anything overflowing */
        overflow: hidden;
        position: relative;
        z-index: 1;
        
        .cs-container {
            width: 100%;
            /* changes to 1280px at desktop */
            max-width: (550/16rem);
            margin: auto;
            display: flex;
            flex-direction: column;
            align-items: center;
            /* 48px - 64px */
            gap: clamp(3rem, 6vw, 4rem);
        }

        .cs-content {
            /* set text align to left if content needs to be left aligned */
            text-align: left;
            width: 100%;
            max-width: (522/16rem);
            display: flex;
            flex-direction: column;
            /* centers content horizontally, set to flex-start to left align */
            align-items: flex-start;
            position: relative;
            z-index: 3;
        }

        .cs-text {
            margin-bottom: (16/16rem);
            &:last-of-type {
                margin-bottom: (32/16rem);
            }
        }

        .cs-button-solid {
            font-size: (16/16rem);
            /* 46px - 56px */
            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
            text-decoration: none;
	    	font-weight: 700;
	        text-align: center;
            margin: 0;
            color: #fff;
            min-width: (150/16rem);
            padding: 0 (24/16rem);
            background-color: var(--primary);
            border-radius: (4/16rem);
            display: inline-block;
            position: relative;
            z-index: 1;
            /* prevents padding from adding to the width */
            box-sizing: border-box;

            &:before {
                content: '';
                position: absolute;
                height: 100%;
                width: 0%;
                background: #000;
                opacity: 1;
                top: 0;
                left: 0;
                z-index: -1;
                border-radius: (4/16rem);
                transition: width .3s;
            }

            &:hover {
                &:before {
                    width: 100%;
                }
            }
        }

        .cs-image-group {
            /* scales the whole section down and ties the font size to the vw and stops at 75% of the vale of 1em, changes at desktop */
            font-size:~"min(1.7vw, .60rem)";
            /* everything inside this box is in ems so we can scale it all down proportionally with a font size */
            width: (699/16em);
            height: (643/16em);
            position: relative;
            z-index: 1;

            &:before {
                /* blur effect */
                content: '';
                width: (2000/16rem);
                height: (2000/16rem);
                margin-right: (-450/16rem);
                background-color: rgba(255, 255, 255, 0.08);
                backdrop-filter: blur(20px);
                position: absolute;
                display: none;
                top: (-200/16em);
                right: 50%;
                transform: skew(40deg);
                transform-origin: center;
                z-index: -1;
            }
        }

        .cs-picture {
            width: auto;
            height: (643/16em);
            display: block;
            position: absolute;
            left: 50%;
            bottom: (0/16em);
            transform: translateX(-50%);

            img {
                width: auto;
                height: 100%;
                object-fit: contain;
            }
        }

        .cs-splatter {
            width: (782/16em);
            height: auto;
            object-fit: cover;
            position: absolute;
            bottom: (-40/16em);
            right: (88/16em);
            z-index: -2;
        }

        .cs-graphic {
            width: 100%;
            min-width: (1200/16rem);
            height: auto;
            object-fit: cover;
            position: absolute;
            bottom: 0;
            left: 50%;
            z-index: 1;
            transform: translateX(-50%);
        }

        .cs-dark {
            display: none;
        }
    }
}

/* Tablet - 768px */
@media only screen and (min-width: 48rem) {
    #sbs-1809 {
        .cs-container {
            max-width: (1280/16rem);
            flex-direction: row;
            justify-content: space-between;
            align-items: center;
        }

        .cs-image-group {
            /* set to inherit at Large Desktop */
            font-size:~"min(1.2vw, 1rem)";

            &:before {
                display: block;
            }
        }

        .cs-content {
            width: 51%;
        }
    }
}

/* Dark Mode */
@media only screen and (min-width: 0rem) {
    body.dark-mode {
        #sbs-1809 { 
            .cs-title, .cs-text {
                color: var(--bodyTextColorWhite);
                transition: color .3s;
            }

            .cs-text {
                opacity: .8;
            }

            .cs-light {
                display: none;
            }

            .cs-dark {
                display: block;
            }
        }
    }
}
/* ... */

